# RayTracingProject

./: CMakeLists.txt  Camera.h  Material.h  Sphere.h  Vector3D.h  World.h  World2.h  glad.c  main.cpp  output.txt
app.dSYM/Contents/Resources/DWARF/: app
dependencies/include/glad/: glad.h
